# scriberr_gateway

./: .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml  requirements.txt
docs/: END_USER.md  TECHNICAL_SPEC.md
scriberr_gateway/: __init__.py  config.py  notification.py  scriberr_client.py  server.py
